<resources>
    <string name="app_name">Ocean Notes</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_add">Add</string>
    <string name="title_notes">Your Notes</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="title_note_details">Note Details</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Write your note...</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="empty_notes">No notes yet. Tap Add to create your first note.</string>
</resources>
