<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ocean_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTitleLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/ocean_primary"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ocean_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContent"
                android:minLines="6"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ocean_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            app:backgroundTint="@color/ocean_primary"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</ScrollView>
